package com.keplereum.backend.domain.enumeration;

/**
 * The AlertType enumeration.
 */
public enum AlertType {
    TSUNAMI,
    TORNADO,
    FIRE,
    HURRICANE,
}
