package com.keplereum.backend.domain.enumeration;

/**
 * The SensorActivity enumeration.
 */
public enum SensorActivity {
    ACTIVE,
    INACTIVE,
}
