package com.example.jeeHamlaoui.model.enums;

public enum UserStatus {
    ACTIVE,
    INACTIVE,
    SUSPENDED,
}
